# Test

./: .claudeignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTINUITY.md  CTO_60_DAY_PLAN.md  CTO_AGENT_WORKFLOW.md  CTO_OPERATING_GUIDE.md  CTO_ORG_CHART.md  CTO_ORG_FULL.md  DEEP_REVIEW.md  HANDOFF.md  IMPROVEMENTS.md  README.md  SECRETS.md  STATUS.md  SYSTEM_STATUS.md  alembic.ini  build_report.json  docker-compose.yml  pipeline_runs.json  pyproject.toml  render.yaml
backend/: CLAUDE.md  Dockerfile  INFRASTRUCTURE.md  alembic.ini  conftest.py  pyproject.toml  pytest.ini  render.yaml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_missing_fk_indexes.py  c1d2e3f4a5b6_add_model_releases_inference_logs.py  d4e5f6a7b8c9_create_bots_table.py  ee1a38997dca_initial_schema.py  f1a2b3c4d5e6_add_strategy_promotions.py  g2b3c4d5e6f7_add_agent_activity_logs.py  h3c4d5e6f7a8_add_tasks.py  i4d5e6f7a8b9_add_bot_archive_columns.py  j5e6f7a8b9c0_cross_desk_instrument_fields.py
backend/app/: config.py  database.py  main.py  redis_client.py  static_server.py
backend/app/analytics/: forecasting.py
backend/app/api/: CLAUDE.md  deps.py
backend/app/api/v1/: accounts.py  agent_logs.py  agents.py  alerts.py  analytics.py  archive.py  audit_log.py  auth.py  backtests.py  bots.py  comparison.py  copy_trading.py  experiments.py  improvements.py  integrations.py  kalshi.py  leaderboard.py  market_data.py  (+18 more)
backend/app/archive/: trade_archiver.py
backend/app/backtest/: CLAUDE.md  cpcv.py  data_loader.py  engine.py  metrics.py  monte_carlo.py  stress_test.py  validation_gate.py  walk_forward.py
backend/app/bots/: engine.py  seed.py  templates.py
backend/app/brokers/: CLAUDE.md  alpaca.py  alpaca_headers.py  alpaca_orders.py  base.py  binance.py  kalshi.py  polymarket.py  tradestation.py
backend/app/comparison/: CLAUDE.md  benchmarks.py  engine.py  report_builder.py
backend/app/execution/: CLAUDE.md  advanced_orders.py  almgren_chriss.py  execution_learner.py  iceberg.py  limit_first.py  position_exit.py  rl_exec.py  slippage_tracker.py  smart_router.py  twap.py  vwap.py
backend/app/integrations/: __init__.py  google_docs.py  notion_sync.py  slack_bot.py  slack_workspace.py
backend/app/llm/: __init__.py  employees.py  gateway.py  rule_engine.py
backend/app/ml/: CLAUDE.md  CLAUDE_RESEARCH.md  inference.py  ml_desk_applications.md  model_store.py  registry.py
backend/app/models/: __init__.py  account.py  agent_log.py  alert.py  audit_log.py  backtest.py  base.py  bot.py  comparison.py  experiment.py  inference_log.py  market_data.py  ml_model.py  model_release.py  order.py  position.py  promotion.py  risk.py  slippage.py  strategy.py  task.py  trade.py  user.py
backend/app/notifications/: screenshot.py  slack.py  tracker.py
backend/app/options/: flow.py  macro_calendar.py  wheel.py
backend/app/risk/: CLAUDE.md  circuit_breaker.py  correlation.py  correlation_monitor.py  drawdown_recovery.py  factor_exposure.py  hrp.py  kelly.py  manager.py  portfolio_optimizer.py  rl_position_sizer.py  var.py  vol_targeting.py
backend/app/schemas/: bot.py
backend/app/services/: agent_logger.py
backend/app/strategies/: CLAUDE.md  ENGINEER_GUIDE.md  RESEARCHER_GUIDE.md  __init__.py  base.py
backend/app/tasks/: CLAUDE.md  agent_bus.py  agent_dispatcher.py  agent_memory.py  ai_strategy_generator.py  algo_agent.py  automl_desk.py  backtest_worker.py  bot_runner.py  build_monitor.py  code_quality_loop.py  forecasting_desk.py  free_llm_router.py  holistic_review.py  issue_escalation.py  knowledge_loop.py  ml_retrain.py  modeling_engineer.py  order_sync.py  position_monitor.py  price_feed.py  promotion_criteria.py  promotion_metrics_sync.py  qa_monitor.py  red_team.py  regime_monitor.py  research_pipeline.py  research_scientist.py  scheduler.py  self_improver.py  self_improving_loop.py  slack_handler.py  standup.py  stock_scanners.py  strategy_auction.py  strategy_pipeline.py  strategy_runner.py  task_queue.py  token_budget.py
backend/app/utils/: exceptions.py  logging.py  security.py  token_blocklist.py
backend/app/ws/: agent_logs.py  alerts.py  manager.py  orders.py  prices.py  signal_compare.py
backend/experiments/configs/: ensemble_multi_asset.yaml  lorentzian_knn_eth_1h.yaml  lstm_btc_1h.yaml  xgb_spy_daily.yaml
backend/experiments/debug/: debug_overfitting.py  debug_signal_quality.py
backend/experiments/results/: lstm_btc_1h_v1.json  xgb_spy_daily_v1.json
backend/notebooks/: train_iv_predictor.ipynb  train_lstm.ipynb  train_timesnet_colab.ipynb
backend/tests/: conftest.py  test_frontend_endpoint_hygiene.py  test_prod_deployment_smoke.py
backend/tests/integration/: test_agent_system.py  test_api_endpoints.py  test_api_health.py  test_background_tasks.py  test_bot_archive.py  test_bot_options_api.py  test_cross_user_isolation.py  test_database.py  test_demo_session.py  test_employee_conversations.py  test_leaderboard_api.py  test_ml_models.py  test_realtime_endpoints.py  test_realtime_live.py  test_risk_engine.py  test_strategy_registry.py  test_websocket.py
backend/tests/unit/: conftest.py  test_a3c_lstm.py  test_advanced_metrics.py  test_ai_pr_review.py  test_alembic_single_head.py  test_algo_agent.py  test_all_employees.py  test_all_strategies_contract.py  test_analyst_revision_momentum.py  test_automl_desk.py  test_avellaneda_stoikov_mm.py  test_backtest.py  test_basis_carry.py  test_benchmarks.py  test_bond_equity_rotation.py  test_bot_market_types.py  test_bot_options.py  test_breakout.py  test_btc_eth_stat_arb.py  test_bug_fixes.py  test_build_monitor.py  test_circuit_breaker.py  test_classic_reversion_strategies.py  test_correlation.py  test_cross_desk_fields.py  test_data_loader_crypto.py  test_desk_taxonomy.py  test_employees.py  test_endpoint_smoke.py  test_engine_option_routing.py  test_execution.py  test_execution_learner.py  test_feature_leak_guard.py  test_features.py  test_forecasting.py  test_free_llm_router.py  test_income_macro_strategies.py  test_incremental.py  test_issue_escalation.py  test_kalshi_market_data.py  (+46 more)
(+604 files in other folders)
