[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "quantedge-backend"
version = "0.1.0"
description = "QuantEdge institutional trading platform backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",

    # Redis (Upstash REST-compatible)
    "redis>=5.2.0",
    "httpx>=0.27.2",

    # Config & security
    "pydantic>=2.10.0",
    "pydantic[email]>=2.10.0",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1",  # used directly by app/utils/security.py (passlib dropped, see note there)
    "cryptography>=43.0.0",

    # Brokers
    "alpaca-py>=0.35.0",
    "ccxt>=4.4.0",
    "py-clob-client>=0.18.0",

    # Data & market analysis (needed by strategies at runtime)
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "yfinance>=0.2.50",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",

    # ML inference — in [ml] optional group so Render free tier skips the 800MB torch wheel
    # Install with: pip install -e ".[ml]"  (GPU notebooks, local dev)
    # Render installs: pip install -e "."   (no torch = ML strategies degrade gracefully)
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",

    # Scheduling
    "apscheduler>=3.10.4",

    # Utilities
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.11.0",
    "anyio>=4.7.0",
]

[project.optional-dependencies]
# ML runtime — torch for inference; install on GPU servers/notebooks but NOT on Render free tier
ml = [
    "torch>=2.5.0",
]

# Training — heavy packages only needed on GPU notebooks/workers, NOT on the API server
train = [
    "torch>=2.5.0",
    "optuna>=4.1.0",
    "shap>=0.46.0",
    "stable-baselines3>=2.4.0",
    "gymnasium>=1.0.0",
    "lightning>=2.2.0",
    "mlflow>=2.10.0",
    "ray[tune]>=2.9.0",
]

# Backtesting CLI (vectorbt is huge; only needed when running ./scripts/backtest.sh)
backtest = [
    "vectorbt>=0.26.2",
]

# Google Docs/Sheets/Slides integration (work docs). Optional — the integration
# module no-ops when these aren't installed. Install with: pip install -e ".[docs]"
docs = [
    "google-api-python-client>=2.150.0",
    "google-auth>=2.35.0",
]

# Development / CI
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.2",
    "aiosqlite>=0.19.0",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

# Test (subset of dev, for CI that doesn't need type checking)
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.2",
    "aiosqlite>=0.19.0",
    "psycopg2-binary>=2.9.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
